# rust

./: README.md
4inline/: Cargo.toml
4inline/src/: fourinline.rs  main.rs
algebraic_surfaces/: Cargo.toml
algebraic_surfaces/src/: as_funcs.rs  aux_funcs.rs  evals.rs  lib.rs  main.rs  mt_as.rs  param_surf.rs  parametric_surfaces_traits.rs
attractor3d/: Cargo.toml
attractor3d/src/: attr3d.rs  color_interp.rs  main.rs  vector3d.rs
convexhull/: Cargo.toml
convexhull/cpp/: Makefile
convexhull/src/: convexhull.rs  main.rs  test.rs  waterman.rs
dc/: Cargo.toml
dc/src/: dc.rs  dc_hp.rs  fastvect.rs  lib.rs  main.rs  zvm.rs
epub_indexer/: Cargo.toml
epub_indexer/src/: main.rs
fastsin/: Cargo.toml
fastsin/src/: fastsin.rs  main.rs
fastvect/: Cargo.toml
fastvect/src/: fast2d.rs  fastvect.rs  main.rs  vector3d.rs
glsl/: Cargo.toml
glsl/src/: dc.shader  dummy.shader  lib.rs  main.rs  test.shader  voronoi.shader
hsv2rgb/: Cargo.toml  build.rs
hsv2rgb/cpp/: Makefile  fast_hsv2rgb.h
hsv2rgb/src/: hsv.rs  main.rs
johnson/: Cargo.toml
johnson/src/: deep_flat.rs  johnson.rs  johnson_data.rs  lib.rs  main.rs  strobe.rs
line_art/: Cargo.toml
line_art/la/: butterfly1.la  butterfly3.la  circles1.la  circles2.la  lines1.la  lines3.la  lines4.la  lines_bird.la  olive.la
line_art/src/: main.rs  parser.rs  scanner.rs  support.rs  test.rs  using_kiss3d.rs
line_graphs/: Cargo.toml
line_graphs/la/: lines2.la
line_graphs/src/: color_interp.rs  ellipse.rs  f01.la  (+9 more)
lorentz/: Cargo.toml
mandelbrot/: Cargo.toml
metal/: Cargo.toml
nbodies/: Cargo.toml
ocl/: Cargo.toml
pi_decs/: Cargo.toml
polyhedronisme/: Cargo.toml
queens/: Cargo.toml
radial spec/: Cargo.toml
sh/: Cargo.toml
sh/src/: main.rs  sh.rs
sh_wrl/: Cargo.toml
spiral/: Cargo.toml
sudoku/: Cargo.toml
sudoku/src/: libs.rs  main.rs  sudoku.rs
symmetric_icon/: Cargo.toml
voronoi/: Cargo.toml
voronoi/src/: main.rs  point.rs  voronoi.rs
vsl/: Cargo.toml
(+70 files in other folders)
