[package]
name = "dc"
version = "0.1.0"
authors = ["Roberto robertoforcen@gmail.com"]
edition = "2018"


[profile.release]
debug = false
lto = false # "fat"
codegen-units = 8
opt-level = 3
overflow-checks = false

[profile.dev]
opt-level = 0

[dependencies]
num_cpus = "*"
num = "*"
image = "*"
rayon = "*"
druid = { version = "*", features = ["im"] }
