[package]
name = "sh"
version = "0.1.0"
authors = ["roberto forcen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
lto = false # "fat"
codegen-units = 8
opt-level = 3
overflow-checks = false

[dependencies]
rayon = "*"
kiss3d = "*"
nalgebra="*"
image="*"
ncollide3d="*"