[package]
name = "sudoku"
version = "0.1.0"
authors = ["asd"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
scoped-pool = "*"
num_cpus = "*"
array2d = "*"
im = { version = "*", optional = true }
druid = { version = "*", features = ["im"] }
