[package]
name = "voronoi"
version = "0.1.0"
authors = ["rfn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = false
lto = false # "fat"
codegen-units = 8
opt-level = 3
overflow-checks = false

[dependencies]
rand = "0.8.0"
image = "0.23.12"
rayon = "1.5.0"
